Arreglados confusiones entre Controlador, modelo y servicios.